<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/gradient_bg"
		android:orientation="vertical"
		>

	<android.support.design.widget.AppBarLayout
			android:background="@null"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:fitsSystemWindows="true"
			app:elevation="0dp"
			>

		<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				>

			<android.support.v7.widget.Toolbar
					android:id="@+id/MyToolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					app:layout_collapseMode="parallax"
					/>

			<TextView
					android:textStyle="bold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:text="@string/add_new_task"
					android:textColor="@android:color/white"
					android:textSize="17sp"
					/>

		</FrameLayout>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:padding="16dp"
				>

			<android.support.v7.widget.CardView
					android:layout_width="70dp"
					android:layout_height="70dp"
					android:layout_gravity="center_horizontal"
					android:background="@color/white"
					app:cardCornerRadius="36dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/tag"
						android:textColor="@color/colorPrimary"
						android:textSize="20sp"/>

				<ImageView
						android:id="@+id/img_tag_pick"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@null"
						android:padding="16dp"/>
			</android.support.v7.widget.CardView>

			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginBottom="24dp"
					android:padding="4dp"
					android:text="@string/tag_picker_hint"
					android:textAlignment="center"
					android:textColor="@color/textSecondary"/>


			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:orientation="horizontal">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="TODO"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"/>

				<android.support.v7.widget.SwitchCompat
						android:id="@+id/switch_status"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="DONE"
						android:textColor="@color/colorAccent"
						android:textSize="17sp"
						android:textStyle="bold"/>

			</LinearLayout>

			<RelativeLayout

					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<ImageView
						android:id="@+id/img_left"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_alignParentStart="true"
						android:layout_centerVertical="true"
						android:paddingBottom="24dp"
						android:paddingTop="24dp"
						android:src="@drawable/ic_left_arrow"/>

				<TextView
						android:id="@+id/tv_priority"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerHorizontal="true"
						android:layout_centerInParent="true"
						android:layout_centerVertical="true"
						android:paddingBottom="20dp"
						android:textSize="17sp"
						android:textStyle="bold"/>

				<ImageView
						android:id="@+id/img_right"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:paddingBottom="24dp"
						android:paddingTop="24dp"
						android:src="@drawable/ic_right_arrow"/>

			</RelativeLayout>

			<EditText
					android:id="@+id/edt_label"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:hint="Label"
					android:paddingBottom="8dp"
					android:textColor="@android:color/white"
					android:textSize="17sp">

				<requestFocus/>
			</EditText>

			<EditText
					android:id="@+id/edt_description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:hint="Description"
					android:textColor="@android:color/white"
					android:textSize="17sp"

					/>

			<EditText
					android:id="@+id/edt_date"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:focusable="false"
					android:hint="Date"
					android:textColor="@android:color/white"
					android:textSize="17sp"

					/>

			<EditText
					android:id="@+id/edt_time"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:focusable="false"
					android:hint="Time"
					android:textColor="@android:color/white"
					android:textSize="17sp"

					/>


			<Button
					android:id="@+id/btn_done"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/default_button"
					android:text="@android:string/ok"
					android:textColor="@android:color/white"
					/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>